# msdorkdump

./: README.md  msdorkdump.py  pyproject.toml  requirements.txt
msdorkdump/: __main__.py
