[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling >= 1.11.0",
  "pip >= 22.0.0"
]

[project.scripts]
msdorkdump = "msdorkdump.__main__:main"


[project]
name            = "msdorkdump"
version         = "0.0.1"
description     = "Google Dork File Finder that queries a specified domain name and variety of file extensions."
readme          = "README.md"
license-files   = { paths = ["LICENSE"] }
requires-python = ">=3.8"

authors = [
  { name = "Joe Helle", email = "joe@tcm-sec.com" },
]


dependencies = [
  "colorama",
  "google",
  "PyExifTool",
]


[project.urls]
GitHub = "https://github.com/dievus/msdorkdump"



[tool.hatch.build]
ignore-vcs   = false
reproducible = true
directory    = "dist"
include = [
  ".git",
  ".gitignore",
  "msdorkdump",
  "tools",
  "images",
  "LICENSE",
  "pyproject.toml",
]
exclude = [ ]

[tool.hatch.metadata]
allow-direct-references = true
